<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MovieDescriptionFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="470dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="#050B18"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="@android:color/transparent">

                <ImageView
                    android:id="@+id/img_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="470dp"
                    android:background="?android:attr/statusBarColor"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:background="@tools:sample/backgrounds/scenic" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:layout_marginTop="30dp"
                        app:borderWidth="0dp"
                        android:backgroundTint="?android:attr/statusBarColor"
                        android:src="@drawable/ic_back_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="?android:attr/textColorPrimary" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_kp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:borderWidth="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:backgroundTint="?android:attr/statusBarColor"
                        android:src="@drawable/ic_url_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="?android:attr/textColorPrimary" />

                    <!--Network error-->

                    <ImageView
                        android:id="@+id/img_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_240"
                        android:src="@drawable/ic_error_100"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@id/txt_error_up"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_error_up"
                        style="@style/TextView_HelpText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/spacing_16"
                        android:paddingTop="@dimen/spacing_16"
                        android:text="@string/txt_error_1"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/img_error" />

                    <TextView
                        android:id="@+id/txt_error_down"
                        style="@style/TextView_HelpText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_error_2"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_error_up" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btn_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:layout_marginBottom="@dimen/spacing_16"
                        android:backgroundTint="@color/colorButtonEnabled"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_error_repeat"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_error_down" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:background="@android:color/transparent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/spacing_25"
                android:paddingRight="@dimen/spacing_25">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_120"
                    android:indeterminateTint="?android:attr/colorPrimary"
                    android:progressTint="?android:attr/colorPrimary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_25"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_movie_genre_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Жанры:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <TextView
                    android:id="@+id/tv_movie_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_8"
                    android:layout_marginTop="@dimen/spacing_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_movie_genre_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <TextView
                    android:id="@+id/tv_movie_countries_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Страны:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_genres" />

                <TextView
                    android:id="@+id/tv_movie_countries"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_movie_genres"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_genres" />

                <TextView
                    android:id="@+id/tv_movie_year_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Год производства:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_countries" />

                <TextView
                    android:id="@+id/tv_movie_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_8"
                    android:layout_marginTop="@dimen/spacing_16"
                    app:layout_constraintStart_toEndOf="@id/tv_movie_year_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_countries" />

                <TextView
                    android:id="@+id/tv_movie_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_year"
                    tools:text="@tools:sample/lorem/random" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>